--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+ # Sensitive files
+*.publishsettings
+**/Properties/PublishProfiles/*.pubxml
+**/appsettings.Production.json
+
 # User-specific files
 *.rsuser
 *.suo
