chore: update connection string

--- a/Tournaments.Api/appsettings.Azure.json
+++ b/Tournaments.Api/appsettings.Azure.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TournamentsApiContext": "Server=tcp:dev-common-sql.database.windows.net,1433;Initial Catalog=tournaments-prod-db;Persist Security Info=False;User ID=sqladmin;Password=MqcB9hxkf%s/qjNU('A2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "TournamentsApiContext": "Server=tcp:dev-common-sql.database.windows.net,1433;Initial Catalog=tournaments-prod-db;Persist Security Info=False;User ID=sqladmin;Password=SECRET;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
