--- a/.cursorignore
+++ b/.cursorignore
@@ -2,5 +2,6 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
 **/bin/
 **/obj/
-/docs/
+docs/
 Tournaments.Docs/
+Tournaments.Web/wwwroot/
